[gd_scene load_steps=85 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Ship Sprites/Forwards/Vault/fv0.png" type="Texture" id=2]
[ext_resource path="res://circle.png" type="Texture" id=3]
[ext_resource path="res://Ship Sprites/Left/Cannons/lc1.png" type="Texture" id=4]
[ext_resource path="res://Ship Sprites/Right/Mobility/rm3.png" type="Texture" id=5]
[ext_resource path="res://cannon fire.mp3" type="AudioStream" id=6]
[ext_resource path="res://coins.mp3" type="AudioStream" id=7]
[ext_resource path="res://Ship Sprites/Forwards/Cannons/fc4.png" type="Texture" id=8]
[ext_resource path="res://Ship Sprites/Left/Vault/lv0.png" type="Texture" id=9]
[ext_resource path="res://Ship Sprites/Right/Mobility/rm5.png" type="Texture" id=10]
[ext_resource path="res://Ship Sprites/Left/Cannons/lc2.png" type="Texture" id=11]
[ext_resource path="res://Ship Sprites/Right/Cannons/rc4.png" type="Texture" id=12]
[ext_resource path="res://Ship Sprites/Left/Mobility/lm5.png" type="Texture" id=13]
[ext_resource path="res://Ship Sprites/Left/Cannons/lc0.png" type="Texture" id=14]
[ext_resource path="res://Ship Sprites/Right/Cannons/rc1.png" type="Texture" id=15]
[ext_resource path="res://Ship Sprites/Forwards/Vault/fv3.png" type="Texture" id=16]
[ext_resource path="res://Ship Sprites/Left/Cannons/lc5.png" type="Texture" id=17]
[ext_resource path="res://Ship Sprites/Right/Cannons/rc0.png" type="Texture" id=18]
[ext_resource path="res://Ship Sprites/Forwards/Cannons/fc2.png" type="Texture" id=19]
[ext_resource path="res://Ship Sprites/Forwards/Cannons/fc0.png" type="Texture" id=20]
[ext_resource path="res://Ship Sprites/Right/Mobility/rm1.png" type="Texture" id=21]
[ext_resource path="res://Ship Sprites/Forwards/Vault/fv1.png" type="Texture" id=22]
[ext_resource path="res://EdgeOfTheGalaxyRegular-OVEa6.otf" type="DynamicFontData" id=23]
[ext_resource path="res://Ship Sprites/Forwards/Vault/fv2.png" type="Texture" id=24]
[ext_resource path="res://Ship Sprites/Forwards/Cannons/fc1.png" type="Texture" id=25]
[ext_resource path="res://Ship Sprites/Left/Cannons/lc4.png" type="Texture" id=26]
[ext_resource path="res://Ship Sprites/Forwards/Cannons/fc5.png" type="Texture" id=27]
[ext_resource path="res://Ship Sprites/Right/Mobility/rm2.png" type="Texture" id=28]
[ext_resource path="res://Ship Sprites/Right/Mobility/rm0.png" type="Texture" id=29]
[ext_resource path="res://Ship Sprites/Forwards/Vault/fv4.png" type="Texture" id=30]
[ext_resource path="res://Ship Sprites/Right/Cannons/rc5.png" type="Texture" id=31]
[ext_resource path="res://Ship Sprites/Right/Cannons/rc2.png" type="Texture" id=32]
[ext_resource path="res://Ship Sprites/Forwards/Vault/fv5.png" type="Texture" id=33]
[ext_resource path="res://Ship Sprites/Left/Vault/lv1.png" type="Texture" id=34]
[ext_resource path="res://Ship Sprites/Left/Vault/lv2.png" type="Texture" id=35]
[ext_resource path="res://Ship Sprites/Forwards/Cannons/fc3.png" type="Texture" id=36]
[ext_resource path="res://Ship Sprites/Right/Cannons/rc3.png" type="Texture" id=37]
[ext_resource path="res://Ship Sprites/Right/Mobility/rm4.png" type="Texture" id=38]
[ext_resource path="res://Ship Sprites/Left/Cannons/lc3.png" type="Texture" id=39]
[ext_resource path="res://Ship Sprites/Left/Hull/lh0.png" type="Texture" id=40]
[ext_resource path="res://Ship Sprites/Right/Hull/rh0.png" type="Texture" id=41]
[ext_resource path="res://Ship Sprites/Forwards/Hull/fh3.png" type="Texture" id=42]
[ext_resource path="res://Ship Sprites/Right/Hull/rh1.png" type="Texture" id=43]
[ext_resource path="res://Ship Sprites/Right/Hull/rh5.png" type="Texture" id=44]
[ext_resource path="res://Ship Sprites/Left/Hull/lh1.png" type="Texture" id=45]
[ext_resource path="res://Ship Sprites/Forwards/Mobility/fm1.png" type="Texture" id=46]
[ext_resource path="res://Ship Sprites/Forwards/Mobility/fm5.png" type="Texture" id=47]
[ext_resource path="res://Ship Sprites/Right/Hull/rh2.png" type="Texture" id=48]
[ext_resource path="res://Ship Sprites/Left/Hull/lh3.png" type="Texture" id=49]
[ext_resource path="res://Ship Sprites/Forwards/Hull/fh4.png" type="Texture" id=50]
[ext_resource path="res://Ship Sprites/Forwards/Hull/fh1.png" type="Texture" id=51]
[ext_resource path="res://Ship Sprites/Left/Mobility/lm0.png" type="Texture" id=52]
[ext_resource path="res://Ship Sprites/Forwards/Mobility/fm4.png" type="Texture" id=53]
[ext_resource path="res://Ship Sprites/Left/Hull/lh4.png" type="Texture" id=54]
[ext_resource path="res://Ship Sprites/Forwards/Mobility/fm2.png" type="Texture" id=55]
[ext_resource path="res://Ship Sprites/Left/Mobility/lm1.png" type="Texture" id=56]
[ext_resource path="res://Ship Sprites/Forwards/Hull/fh2.png" type="Texture" id=57]
[ext_resource path="res://Ship Sprites/Forwards/Hull/fh0.png" type="Texture" id=58]
[ext_resource path="res://Ship Sprites/Forwards/Mobility/fm0.png" type="Texture" id=59]
[ext_resource path="res://Ship Sprites/Forwards/Mobility/fm3.png" type="Texture" id=60]
[ext_resource path="res://Ship Sprites/Left/Mobility/lm2.png" type="Texture" id=61]
[ext_resource path="res://Ship Sprites/Right/Hull/rh4.png" type="Texture" id=62]
[ext_resource path="res://Ship Sprites/Left/Mobility/lm4.png" type="Texture" id=63]
[ext_resource path="res://Ship Sprites/Left/Mobility/lm3.png" type="Texture" id=64]
[ext_resource path="res://Ship Sprites/Left/Hull/lh2.png" type="Texture" id=65]
[ext_resource path="res://Ship Sprites/Left/Hull/lh5.png" type="Texture" id=66]
[ext_resource path="res://Ship Sprites/Forwards/Hull/fh5.png" type="Texture" id=67]
[ext_resource path="res://Ship Sprites/Right/Hull/rh3.png" type="Texture" id=68]
[ext_resource path="res://Ship Sprites/Right/Vault/rv4.png" type="Texture" id=69]
[ext_resource path="res://Ship Sprites/Left/Vault/lv5.png" type="Texture" id=70]
[ext_resource path="res://Ship Sprites/Right/Vault/rv3.png" type="Texture" id=71]
[ext_resource path="res://Ship Sprites/Left/Vault/lv4.png" type="Texture" id=72]
[ext_resource path="res://Ship Sprites/Right/Vault/rv1.png" type="Texture" id=73]
[ext_resource path="res://Ship Sprites/Right/Vault/rv2.png" type="Texture" id=74]
[ext_resource path="res://Ship Sprites/Right/Vault/rv5.png" type="Texture" id=75]
[ext_resource path="res://Ship Sprites/Right/Vault/rv0.png" type="Texture" id=76]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "right 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 67 ) ],
"loop": true,
"name": "forwards 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "right 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ) ],
"loop": true,
"name": "forwards 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "forwards 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 62 ) ],
"loop": true,
"name": "right 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ) ],
"loop": true,
"name": "left 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 66 ) ],
"loop": true,
"name": "left 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 58 ) ],
"loop": true,
"name": "forwards 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 57 ) ],
"loop": true,
"name": "forwards 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 68 ) ],
"loop": true,
"name": "right 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ) ],
"loop": true,
"name": "left 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 54 ) ],
"loop": true,
"name": "left 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ) ],
"loop": true,
"name": "forwards 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "left 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "right 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "right 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 65 ) ],
"loop": true,
"name": "left 2",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "right 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "forwards 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "right 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "forwards 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "forwards 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "right 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "left 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "left 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "forwards 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "forwards 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "right 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ) ],
"loop": true,
"name": "left 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "left 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "forwards 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "left 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "right 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "right 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "left 2",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 74 ) ],
"loop": true,
"name": "right 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "forwards 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 76 ) ],
"loop": true,
"name": "right 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "forwards 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "forwards 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 69 ) ],
"loop": true,
"name": "right 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "left 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 70 ) ],
"loop": true,
"name": "left 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "forwards 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "forwards 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 71 ) ],
"loop": true,
"name": "right 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "left 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 72 ) ],
"loop": true,
"name": "left 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "forwards 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "left 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 73 ) ],
"loop": true,
"name": "right 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 75 ) ],
"loop": true,
"name": "right 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "left 2",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "right 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "forwards 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "right 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ) ],
"loop": true,
"name": "forwards 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ) ],
"loop": true,
"name": "forwards 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "right 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 56 ) ],
"loop": true,
"name": "left 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "left 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 59 ) ],
"loop": true,
"name": "forwards 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ) ],
"loop": true,
"name": "forwards 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "right 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 64 ) ],
"loop": true,
"name": "left 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 63 ) ],
"loop": true,
"name": "left 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ) ],
"loop": true,
"name": "forwards 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 52 ) ],
"loop": true,
"name": "left 0",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "right 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "right 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 61 ) ],
"loop": true,
"name": "left 2",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.647059, 0.443137, 0.0627451, 1, 0.988235, 0.858824, 0.301961, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 30, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_random = 0.5
angle_random = 0.5
scale_random = 0.25
color = Color( 0.988235, 0.858824, 0.301961, 1 )
color_ramp = SubResource( 9 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 23 )

[node name="White Coral" type="KinematicBody2D"]
collision_layer = 41
collision_mask = 41
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HullSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.425, 0.425 )
frames = SubResource( 1 )
animation = "forwards 0"

[node name="CannonSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.425, 0.425 )
frames = SubResource( 6 )
animation = "forwards 0"

[node name="VaultSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.425, 0.425 )
frames = SubResource( 7 )
animation = "forwards 0"

[node name="MobilitySprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.425, 0.425 )
frames = SubResource( 8 )
animation = "forwards 0"

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 183, 1 )
default_color = Color( 0.533333, 0.537255, 0.552941, 1 )
texture = ExtResource( 3 )
texture_mode = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, -70, 32, -10, 36, 0, 36, 70, -36, 70, -36, 0, -32, -10 )

[node name="Cannonfire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
bus = "SFX"

[node name="Particles" type="Particles2D" parent="."]
scale = Vector2( 10, 10 )
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 4 )

[node name="Coins" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0
pitch_scale = 0.9
bus = "SFX"

[node name="Tips" type="Polygon2D" parent="."]
visible = false
position = Vector2( -75, -200 )
color = Color( 0.72549, 0.658824, 0.447059, 0.823529 )
polygon = PoolVector2Array( 0, 0, 150, 0, 150, 100, 100, 100, 75, 125, 50, 100, 0, 100 )

[node name="RichTextLabel" type="RichTextLabel" parent="Tips"]
margin_left = 5.0
margin_top = 10.0
margin_right = 145.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center] Move using
[A] & [D]
Shoot with
Left Click[/center]"
text = " Move using
[A] & [D]
Shoot with
Left Click"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reload" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Drain" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="timeout" from="Drain" to="." method="_on_Drain_timeout"]
